Fix content div too small

--- a/app/static/app/base.css
+++ b/app/static/app/base.css
@@ -107,6 +107,7 @@ h1 {
 
 #content {
     padding: 30px;
+    width: 100%;
 }
 
 body {
