--- a/sample/static/sample/samples.css
+++ b/sample/static/sample/samples.css
@@ -1,3 +1,7 @@
+.content {
+    padding: 2em;
+}
+
 .sample-card {
     padding: 16px;
     margin-right: 50px;
